--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@tanstack/react-table": "^8.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "icons": "^1.0.0",
     "lucide-react": "^0.343.0",
     "next": "^14.1.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
