--- a/package.json
+++ b/package.json
@@ -11,58 +11,29 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-=======
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
->>>>>>> a4a0dad (adding files)
-=======
-    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
->>>>>>> b0c6971 (adding badges)
     "@radix-ui/react-label": "^2.0.2",
-<<<<<<< HEAD
     "@radix-ui/react-menubar": "^1.0.4",
-=======
     "@radix-ui/react-popover": "^1.0.7",
->>>>>>> 2981c07 (adding 3 completed invoice pages)
-=======
-=======
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
->>>>>>> 17cfc3e (Assest page done)
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
->>>>>>> 7e73bc9 (update on assets pages)
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-<<<<<<< HEAD
-    "icons": "^1.0.0",
-    "lucide-react": "^0.343.0",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-=======
     "date-fns": "^3.4.0",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
->>>>>>> b0c6971 (adding badges)
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
