--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 .pnp.js
 .yarn/install-state.gz
 
+
+package-lock.json*
+yarn.lock*
+
 # testing
 /coverage
 
@@ -34,3 +38,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
