--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.1",
-    "@tanstack/react-table": "^8.13.2",
+    "@tanstack/react-table": "^8.15.3",
+    "apexcharts": "^3.48.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-date-range": "^2.0.0-alpha.4",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
